# learn_cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.bat  clean_build.bat  run.bat
app/: CMakeLists.txt  main.cpp
src/: MyFrame.cpp  MyFrame.h  add.cpp  main.cpp
src/math/: math.cpp  math.h
test_cmake/: CMakeLists.txt
utils/: CMakeLists.txt  ls_math.cpp  ls_math.h
